refactoring 중복 코드 제거: findById 재사용